Fix issues with header buttons and header bar when minimised in dark mode.

--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -15,7 +15,8 @@
     .header-button {
       border-radius: 100%;
       background: rgb(0 0 0 / 25%);
-      width: 1.3em;
+      width: 18px;
+      height: 18px;
       aspect-ratio: 1;
       line-height: unset;
       display: grid;
