--- a/less/v2/character.less
+++ b/less/v2/character.less
@@ -67,7 +67,8 @@
     border: unset;
 
     > header {
-      align-items: unset;
+      align-items: center;
+      .header-button, .document-id-link { margin-top: 0; }
       .window-title { visibility: visible; }
     }
     nav.tabs { display: none; }
