--- a/less/v2/dark/character.less
+++ b/less/v2/dark/character.less
@@ -1,6 +1,6 @@
 .dnd5e-theme-dark .dnd5e2.sheet.actor.character,
 .dnd5e2.sheet.actor.character.dnd5e-theme-dark {
-  background: none;
+  &:not(.minimized) { background: none; }
 
   .window-content {
     background: var(--dnd5e-color-dark-gray) url("/ui/denim075.png");
